--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,8 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="container text-centre">
+      <%= yield %>
+    </div>
   </body>
 </html>
