--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <div class="container text-centre">
+    <div class="container">
       <%= yield %>
     </div>
   </body>
